# dauricum

./: LICENSE  README.md  build.bat  obfuscate-file.py  pyproject.toml  upload.bat
dauricum.egg-info/: PKG-INFO  SOURCES.txt
examples/: dauricum-rewritten-v1.0.py  example1-obf-0.1.py  example1-obf-0.3.py  example1-obf-0.4.py  example1-unobf.py  rewritten-1.0-example.py  rewritten-1.1-example.py
src/dauricum/: __init__.py  __main__.py  logger.py
src/dauricum.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/dauricum/cli/: __init__.py
src/dauricum/examples/: example-obfuscated.py  example-unobfuscated.py
src/dauricum/tools/: logger.py  utils.py
src/dauricum/transformers/: ControlFlowTransformer.py  IfStatementTransformer.py  InOutlineTransformer.py  MBAExprTransformer.py  MemoryTransformer.py  OpaqueTransformer.py  RenamerTransformer.py  StringTransformer.py  TryCatchTransformer.py  TryNormalizerTransformer.py  base.py  biopaque_transformer.py  call_transformer.py  controlflow_transformer.py  exceptionjmp_transformer.py  format_transformer.py  function_transformer.py  import_transformer.py  junk_transformer.py  number_transformer.py  outline_transformer.py  renamer_transformer.py  string_transformer.py
