[project]
name = "dauricum"
version = "0.4"
authors = [
  { name="nighty1337", email="mg938436@gmail.com" },
]
description = "Python 3.10+ obfuscator with many obfuscation methods."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]

[project.urls]
"Homepage" = "https://github.com/Maxdsdsdsd/dauricum"
"Bug Tracker" = "https://github.com/Maxdsdsdsd/dauricum/issues"